# odp-platform-qemu-arm-virt

./: .gitmodules  AGENTS.md  Makefile  NOTICE  README.md
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: build.yml
bios/platform/QemuSbsaPkg/AcpiTables/: thermal.asl
docs/: devcontainer.md  e2e-tests.md
e2e-tests/: Cargo.toml  Makefile  README.md  startup-mctp.nsh  startup-thermal.nsh  startup-tpm.nsh  startup.nsh
e2e-tests/test-support/src/: lib.rs
e2e-tests/tests/battery/src/: main.rs
e2e-tests/tests/ec-battery/: Cargo.toml
e2e-tests/tests/ec-battery/src/: main.rs
e2e-tests/tests/thermal/: Cargo.toml
e2e-tests/tests/thermal/src/: main.rs
e2e-tests/tests/time-alarm/: Cargo.toml
e2e-tests/tests/time-alarm/src/: main.rs
e2e-tests/tests/tpm/src/: main.rs
mod/: Makefile  README.md
mod/secure-services/: Makefile
mod/secure-services/platform/: Cargo.toml  rust-toolchain.toml
mod/secure-services/platform/linker/: qemu-ec-sp.dts
mod/secure-services/platform/qemu-sp-uart/: Cargo.toml
mod/secure-services/platform/qemu-sp-uart/src/: lib.rs
mod/secure-services/platform/src/: main.rs  mctp_ping.rs
mod/uefi/: Makefile  README.md
mod/uefi/platform/: README.md
postbuild/os/: Makefile
scripts/: push-devcontainer-cache.sh  test-e2e-mctp.sh  test-serial.sh  test-sp-ec-link.sh  test-sp-services.sh
scripts/lib/: dual-qemu-harness.sh  ec-qemu.sh  host-qemu.sh  pty-raw.sh  sbsa-qemu.sh  swtpm.sh
test-serial-vdrive/: startup.nsh
