[package]
name = "qemu-sp-uart"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "PL011 UART driver for the QEMU SBSA secure partition"
categories = ["embedded", "no-std", "no-std::no-alloc"]

[dependencies]
# Intentionally empty — own minimal Mmio trait, no volatile-register dep (per Phase 14 D-2).

[dev-dependencies]
# MockMmio lives behind #[cfg(test)] in src/lib.rs; no extra deps needed.
